--- a/OneDo/View/Controls/NoteListControl.xaml
+++ b/OneDo/View/Controls/NoteListControl.xaml
@@ -170,7 +170,7 @@
                             <TextBlock Margin="0,0,4,0"
                                        Style="{ThemeResource CaptionTextBlockStyle}"
                                        Foreground="{x:Bind IsOverdue, Mode=OneWay, Converter={StaticResource OverdueForegroundConverter}}"
-                                       Text="{x:Bind Date, Mode=OneWay, Converter={StaticResource DateConverter}}"
+                                       Text="{x:Bind DateText, Mode=OneWay}"
                                        Visibility="{x:Bind HasDate, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}" />
                             <FontIcon Margin="0,0,4,0"
                                       Foreground="{x:Bind IsOverdue, Mode=OneWay, Converter={StaticResource OverdueForegroundConverter}}"
@@ -179,7 +179,7 @@
                                       Visibility="{x:Bind HasReminder, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}" />
                             <TextBlock Style="{ThemeResource CaptionTextBlockStyle}"
                                        Foreground="{x:Bind IsOverdue, Mode=OneWay, Converter={StaticResource OverdueForegroundConverter}}"
-                                       Text="{x:Bind Reminder, Mode=OneWay, Converter={StaticResource TimeConverter}}"
+                                       Text="{x:Bind ReminderText, Mode=OneWay}"
                                        Visibility="{x:Bind HasReminder, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}" />
                         </StackPanel>
                     </StackPanel>
